styling, submitting file keep style sheet. no isset error

--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,21 @@
 <html>
-<head>
-<link rel="stylesheet" href="Originality.css">
-<title> homepage </title>
-</head>
-<body>
-<table width= "100%">
-<tr>
-	<td width= "50%" ><a href= "Index.html"> Homepage </a></td>
-	<td width= "50%"><a href = "TempCheck.PHP"> Tables </a> </td>
-</tr>
-</table>
-<h1>Welcome</h1>
+	<head>
+		<link rel="stylesheet" href="Originality.css">
+		<title> homepage </title>
+	</head>
+	<body>
+		<table width= "100%">
+			<tr>
+				<td width= "33%" ><a href= "index.html"> Homepage </a></td>
+				<td width= "33%"><a href = "TempCheck.PHP"> Tables </a></td>
+				<td width= "33%" ><a href= "DataHandling.php"> Datahandling </a></td>
+			</tr>
+		</table>
+		<h1>Welcome</h1>
 
-<b>On the second page you will find the measurements done with the appropiate sensors. This website will provide multiple data readings. Navigate on the top or click <a href = "TempCheck.PHP" > here</b>
+		<b>On the second page you will find the measurements done with the appropiate sensors. This website will provide multiple data readings. Navigate on the top or click <a href = "TempCheck.PHP" > here</b>
 
 
 
-</body>
+	</body>
 </html>
