standard sensor id format and data rounded

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 		</table>
 		<h1>Welcome</h1>
 
-		<b>On the second page you will find the measurements done with the appropiate sensors. This website will provide multiple data readings. Navigate on the top or click <a href = "TempCheck.PHP" > here</b>
+		<b>On the second page you will find the measurements done with the appropiate sensors. This website will provide multiple data readings. Navigate on the top or <a href = "TempCheck.PHP" >click here</b>
 
 
 
