Datahandling has timestamp navigation is fixed

--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,12 @@
 	<body>
 		<table width= "100%">
 			<tr>
-				<td width= "33%" ><a href= "index.html"> Homepage </a></td>
-				<td width= "33%"><a href = "TempCheck.PHP"> Tables </a></td>
-				<td width= "33%" ><a href= "DataHandling.php"> Datahandling </a></td>
+				<td width= "33%" ><a href= "index.html"> <h1> Homepage </h1> </a> </td>
+				<td width= "33%"><a href = "TempCheck.PHP"> <h1> Tables </h1> </a> </td>
+				<td width= "33%" ><a href= "DataHandling.php"> <h1> Datahandling </h1> </a> </td>
 			</tr>
 		</table>
-		<h1>Welcome</h1>
+		<h2>Welcome</h2>
 
 		<b>On the second page you will find the measurements done with the appropiate sensors. This website will provide multiple data readings. Navigate on the top or <a href = "TempCheck.PHP" >click here</b>
 
